--- a/build.gradle
+++ b/build.gradle
@@ -1,17 +1,35 @@
-apply plugin: 'java'
-apply from: 'gradle-mvn-push.gradle'
+apply plugin: 'com.android.library'
+apply plugin: 'maven'
+apply plugin: 'signing'
+// configure android plugin
+android {
+    compileSdkVersion Integer.parseInt(COMPILE_SDK_VERSION)
+    buildToolsVersion BUILD_TOOLS_VERSION
 
-targetCompatibility = '1.6'
-sourceCompatibility = '1.6'
+    defaultConfig {
+        minSdkVersion Integer.parseInt(MIN_SDK_VERSION)
+        targetSdkVersion Integer.parseInt(TARGET_SDK_VERSION)
+    }
 
-sourceSets {
-	main {
-		java {
-			srcDir 'src'
-		}
-	}
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_6
+        targetCompatibility JavaVersion.VERSION_1_6
+    }
+
+    sourceSets {
+        main {
+            manifest.srcFile 'AndroidManifest.xml'
+            java.srcDirs = ['src']
+            resources.srcDirs = ['src']
+            aidl.srcDirs = ['src']
+            renderscript.srcDirs = ['src']
+            res.srcDirs = ['res']
+            assets.srcDirs = ['assets']
+        }
+        androidTest.setRoot('tests')
+    }
 }
 
 dependencies {
-	compile fileTree(dir: 'libs', include: '*.jar')
+    compile 'com.android.support:support-v4:22.2.0'
 }
