--- a/gradle.properties
+++ b/gradle.properties
@@ -1,18 +1,4 @@
-VERSION_NAME=3.1.0-SNAPSHOT
-VERSION_CODE=1
-GROUP=com.michaelpardo
-
-POM_DESCRIPTION=Active record style SQLite persistence for Android.
-POM_URL=https://github.com/pardom/ActiveAndroid
-POM_SCM_URL=https://github.com/pardom/ActiveAndroid
-POM_SCM_CONNECTION=scm:git@github.com:pardom/ActiveAndroid.git
-POM_SCM_DEV_CONNECTION=scm:git@github.com:pardom/ActiveAndroid.git
-POM_LICENCE_NAME=The Apache Software License, Version 2.0
-POM_LICENCE_URL=http://www.apache.org/licenses/LICENSE-2.0.txt
-POM_LICENCE_DIST=repo
-POM_DEVELOPER_ID=michaelpardo
-POM_DEVELOPER_NAME=Michael Pardo
-
-POM_NAME=ActiveAndroid
-POM_ARTIFACT_ID=activeandroid
-POM_PACKAGING=jar
+COMPILE_SDK_VERSION = 22
+BUILD_TOOLS_VERSION = 22.0.1
+MIN_SDK_VERSION = 16
+TARGET_SDK_VERSION = 22
