--- a/.gitignore
+++ b/.gitignore
@@ -1,39 +1,35 @@
-#Android generated
-bin
-gen
-lint.xml
+# built application files
+*.apk
+*.ap_
 
-#Eclipse
-.project
-.classpath
-.settings
-.checkstyle
+# files for the dex VM
+*.dex
 
-#IntelliJ IDEA
-.idea
-*.iml
-*.ipr
-*.iws
-classes
-gen-external-apklibs
+# Java class files
+*.class
 
-#Maven
-target
-release.properties
-pom.xml.*
+# generated files
+bin/
+gen/
+out/
+build/
+proguard_logs/
 
-#Ant
-ant.properties
+# Local configuration file (sdk path, etc)
 local.properties
-proguard.cfg
-proguard-project.txt
 
-#Other
+# ==== Eclipse project files ====
+.classpath
+.project
+.settings
+.metadata
+
+# === Android Studio ===
+.idea
+**/*.iml
+*.iml
+libs/**/*.iml
 .DS_Store
-dist/
-tmp
 
-# Gradle
-.gradle
-/build
-/out
+# == Gradle staff ==
+.gradle/
